fixed useless css(z-index)

--- a/src/components/member-card/card.module.scss
+++ b/src/components/member-card/card.module.scss
@@ -57,7 +57,6 @@
 
 .settingsContainer {
   position: relative;
-  z-index: 1;
 }
 
 .settingsButton {
